# holonomic_robot

./: README.md
holonomic_robot_bringup/: package.xml  setup.cfg  setup.py
holonomic_robot_bringup/config/: amcl_config.yaml  nav2_params.yaml  nav2_params_holonomic.yaml
holonomic_robot_bringup/holonomic_robot_bringup/: environment_markers.py  fake_lidar_publisher.py  fake_optical_flow.py  floor_image_publisher.py  map_generator.py  particle_cloud_converter.py  static_joint_publisher.py
holonomic_robot_bringup/launch/: full_navigation.launch.py  rviz_display.launch.py
holonomic_robot_bringup/maps/: polygon_map.pgm  polygon_map.yaml
holonomic_robot_bringup/resource/: holonomic_robot_bringup
holonomic_robot_description/: CMakeLists.txt  package.xml
holonomic_robot_description/meshes/: .gitkeep
holonomic_robot_description/rviz/: robot_view.rviz
holonomic_robot_description/urdf/: holonomic_robot.urdf
robot_actuators/: CMakeLists.txt  README.md  package.xml
robot_actuators/action/: ControlGripper.action  ControlPump.action  MoveServo.action
robot_actuators/config/: pump_controller.yaml  servo_controller.yaml
robot_actuators/include/robot_actuators/: jetson_gpio.hpp
robot_actuators/src/: jetson_gpio.cpp  pump_controller.cpp  servo_controller.cpp
robot_application/: ARCHITECTURE_SIMPLIFIED.md  CMakeLists.txt  README.md  SIMPLIFICATION_GUIDE.md  STRATEGIC_PLANNING.md  package.xml  setup.cfg  setup.py
robot_application/behavior_trees/: patrol.xml  pick_place.xml
robot_application/config/: game_state.yaml  mission_controller.yaml  patrol_waypoints.yaml  pick_place_tasks.yaml  task_planner.yaml  teleop.yaml
robot_application/launch/: full_system.launch.py  patrol_mission.launch.py  pick_place_mission.launch.py  strategic_planner.launch.py  teleop_mission.launch.py
robot_application/resource/: robot_application
robot_application/robot_application/: __init__.py  game_state_manager.py  mission_base.py  task_definitions.py  task_planner.py
robot_application/scripts/: game_state_manager.py  patrol_mission.py  pick_place_mission.py  task_planner.py  teleop_mission.py
robot_hardware_cpp/: CMakeLists.txt  README.md  package.xml
robot_hardware_cpp/config/: stm32_bridge.yaml
robot_hardware_cpp/include/robot_hardware_cpp/: protocol_parser.hpp  serial_interface.hpp
robot_hardware_cpp/protocol/: serial_protocol.md
robot_hardware_cpp/src/: protocol_parser.cpp  serial_interface.cpp  stm32_bridge.cpp
